[gd_scene load_steps=39 format=3 uid="uid://vmjywx6b7sa3"]

[ext_resource type="Texture2D" uid="uid://cmfape8v45n6p" path="res://assets/battery.png" id="1_cx5p8"]
[ext_resource type="Script" path="res://var_game.gd" id="1_fwl4g"]
[ext_resource type="Texture2D" uid="uid://dih00016q8p47" path="res://arrays/border_q.png" id="2_10nmm"]
[ext_resource type="FontFile" uid="uid://b5h3021wvch6l" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="3_vnur5"]
[ext_resource type="Texture2D" uid="uid://c83u0hgyso5r1" path="res://Buttons/button UI.png" id="5_fy0cq"]
[ext_resource type="Texture2D" uid="uid://bb8hg83nqnd1i" path="res://spaceman/spaceman-walk-left.png" id="6_ur68y"]
[ext_resource type="Texture2D" uid="uid://bafgvse2o3mh1" path="res://spaceman/spaceman-walk-down.png" id="7_8awwl"]
[ext_resource type="Texture2D" uid="uid://ce3l1tus77wmd" path="res://spaceman/spaceman-walk-right.png" id="8_5qeht"]

[sub_resource type="Animation" id="Animation_luqmm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b1:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("b2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("b3:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("b4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("b5:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("space_guy/AnimatedSprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1.647)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("space_guy/AnimatedSprite2D:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"left"]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("space_guy/AnimatedSprite2D:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_fy8y4"]
resource_name = "b1in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b1:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.770207, 0.168187, 0.169199, 1)]
}

[sub_resource type="Animation" id="Animation_1d1cp"]
resource_name = "b1in_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b1:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.770207, 0.168187, 0.169199, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6kbhh"]
resource_name = "b2in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.773938, 0.37149, 0.0505587, 1)]
}

[sub_resource type="Animation" id="Animation_4qr6l"]
resource_name = "b2in_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.773938, 0.37149, 0.0505587, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_wvo2t"]
resource_name = "b3in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b3:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.84792, 0.605507, 0.247207, 1)]
}

[sub_resource type="Animation" id="Animation_swdn6"]
resource_name = "b3in_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b3:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.84792, 0.605507, 0.247207, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_agtl3"]
resource_name = "b4in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b4:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.731247, 0.668675, 0.126431, 1)]
}

[sub_resource type="Animation" id="Animation_dkhfn"]
resource_name = "b4in_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b4:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.731247, 0.668675, 0.126431, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_v8ywh"]
resource_name = "b5in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("b5:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.397975, 0.847808, 0.116039, 1)]
}

[sub_resource type="Animation" id="Animation_3ho4a"]
resource_name = "walk_backleft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("space_guy/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-25, 0), Vector2(0, -1.647)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("space_guy/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"right", &"new_animation"]
}

[sub_resource type="Animation" id="Animation_3k8pt"]
resource_name = "walk_backright"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("space_guy/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25, -1.647), Vector2(0, -1.647)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("space_guy/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"left", &"middle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("space_guy/AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_aynql"]
resource_name = "walk_left"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("space_guy/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1.647), Vector2(-25, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("space_guy/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"left", &"middle"]
}

[sub_resource type="Animation" id="Animation_8y7ov"]
resource_name = "walk_right"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("space_guy/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1.647), Vector2(25, -1.647)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("space_guy/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.93333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"right", &"middle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44hfs"]
_data = {
"RESET": SubResource("Animation_luqmm"),
"b1in": SubResource("Animation_fy8y4"),
"b1in_2": SubResource("Animation_1d1cp"),
"b2in": SubResource("Animation_6kbhh"),
"b2in_2": SubResource("Animation_4qr6l"),
"b3in": SubResource("Animation_wvo2t"),
"b3in_2": SubResource("Animation_swdn6"),
"b4in": SubResource("Animation_agtl3"),
"b4in_2": SubResource("Animation_dkhfn"),
"b5in": SubResource("Animation_v8ywh"),
"walk_backleft": SubResource("Animation_3ho4a"),
"walk_backright": SubResource("Animation_3k8pt"),
"walk_left": SubResource("Animation_aynql"),
"walk_right": SubResource("Animation_8y7ov")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_h7onc"]
atlas = ExtResource("5_fy0cq")
region = Rect2(15.0208, 47.028, 18.0494, 18.0792)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uqks"]
atlas = ExtResource("6_ur68y")
region = Rect2(0, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wujk"]
atlas = ExtResource("6_ur68y")
region = Rect2(15, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iavwo"]
atlas = ExtResource("6_ur68y")
region = Rect2(30, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gr4p"]
atlas = ExtResource("6_ur68y")
region = Rect2(45, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjgp8"]
atlas = ExtResource("7_8awwl")
region = Rect2(15, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyliw"]
atlas = ExtResource("8_5qeht")
region = Rect2(0, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35b5r"]
atlas = ExtResource("8_5qeht")
region = Rect2(18, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hrtx"]
atlas = ExtResource("8_5qeht")
region = Rect2(36, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbgbr"]
atlas = ExtResource("8_5qeht")
region = Rect2(54, 0, 18, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d6eq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uqks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wujk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iavwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gr4p")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjgp8")
}],
"loop": true,
"name": &"middle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyliw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35b5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hrtx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbgbr")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_jat38"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mshte"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lis36"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jyamb"]
_data = {
"RESET": SubResource("Animation_jat38"),
"fade_in": SubResource("Animation_mshte"),
"fade_out": SubResource("Animation_lis36")
}

[node name="varGame" type="Node2D"]
script = ExtResource("1_fwl4g")
metadata/_edit_vertical_guides_ = [-1656.0]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_44hfs")
}

[node name="back" type="ColorRect" parent="."]
offset_right = 1079.0
offset_bottom = 1930.0

[node name="Battery" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(534, 626)
scale = Vector2(54.125, 56.6)
texture = ExtResource("1_cx5p8")

[node name="b1" type="ColorRect" parent="."]
offset_left = 185.0
offset_top = 959.0
offset_right = 884.0
offset_bottom = 1130.0
color = Color(0, 0, 0, 0)

[node name="b2" type="ColorRect" parent="."]
offset_left = 185.0
offset_top = 781.0
offset_right = 884.0
offset_bottom = 952.0
color = Color(0, 0, 0, 0)

[node name="b3" type="ColorRect" parent="."]
offset_left = 185.0
offset_top = 599.0
offset_right = 884.0
offset_bottom = 770.0
color = Color(0, 0, 0, 0)

[node name="b4" type="ColorRect" parent="."]
offset_left = 185.0
offset_top = 418.0
offset_right = 884.0
offset_bottom = 589.0
color = Color(0, 0, 0, 0)

[node name="b5" type="ColorRect" parent="."]
offset_left = 185.0
offset_top = 236.0
offset_right = 884.0
offset_bottom = 407.0
color = Color(0, 0, 0, 0)

[node name="textCont" type="TextureRect" parent="."]
texture_filter = 1
offset_top = 1197.0
offset_right = 1079.0
offset_bottom = 1445.0
texture = ExtResource("2_10nmm")

[node name="Label" type="RichTextLabel" parent="."]
offset_left = 117.0
offset_top = 1216.0
offset_right = 967.0
offset_bottom = 1424.0
theme_override_fonts/normal_font = ExtResource("3_vnur5")
theme_override_font_sizes/normal_font_size = 50

[node name="opt1" type="TextureRect" parent="."]
texture_filter = 1
offset_top = 1464.0
offset_right = 356.0
offset_bottom = 1584.0
texture = ExtResource("2_10nmm")

[node name="Label" type="RichTextLabel" parent="opt1"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 344.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("3_vnur5")
theme_override_font_sizes/normal_font_size = 30

[node name="opt2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 728.0
offset_top = 1469.0
offset_right = 1080.0
offset_bottom = 1584.0
texture = ExtResource("2_10nmm")

[node name="Label" type="RichTextLabel" parent="opt2"]
layout_mode = 0
offset_left = 16.0
offset_top = 7.0
offset_right = 336.0
offset_bottom = 95.0
theme_override_fonts/normal_font = ExtResource("3_vnur5")
theme_override_font_sizes/normal_font_size = 30

[node name="right" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 598.0
offset_top = 1530.0
offset_right = 727.0
offset_bottom = 1657.0
texture_normal = SubResource("AtlasTexture_h7onc")
stretch_mode = 0

[node name="space_guy" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(544, 1827)
scale = Vector2(14.3214, 11.5357)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="space_guy"]
position = Vector2(0, -1.647)
sprite_frames = SubResource("SpriteFrames_d6eq8")
animation = &"left"
frame = 2

[node name="left" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 356.0
offset_top = 1530.0
offset_right = 485.0
offset_bottom = 1657.0
texture_normal = SubResource("AtlasTexture_h7onc")
stretch_mode = 0
flip_h = true

[node name="fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jyamb")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -120.0
offset_top = -16.0
offset_right = 1203.0
offset_bottom = 1951.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
